<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>uncrustify_vendor</name>
    <version>1.3.0</version>
    <description>
       Build Uncrustify
    </description>
    <maintainer email="dan@digilabs.io">Dan Rose</maintainer>
    <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
    <license>GNU General Public License v2.0</license>  <!-- uncrustify is GPLv2.0 -->

    <url type="website">https://github.com/uncrustify/uncrustify</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
